# simple-langserve-serving-example

./: main.py  pyproject.toml
langserve_serving_example/app/: main.py
